# Model-Agnostic-FL

./: .gitignore  README.md  collaborator.py  pyproject.toml  setup.py
boosting-examples/: README.md
boosting-examples/AdaBoostF_Adult/envoy_1/: envoy_config.yaml
boosting-examples/AdaBoostF_Adult/envoy_8/: envoy_config.yaml
boosting-examples/AdaBoostF_Iris/envoy_1/: envoy_config.yaml
boosting-examples/AdaBoostF_forestcover/envoy_10/: forestcover_shard_descriptor.py
boosting-examples/AdaBoostF_forestcover/envoy_2/: envoy_config.yaml
boosting-examples/AdaBoostF_forestcover/envoy_5/: envoy_config.yaml
boosting-examples/AdaBoostF_forestcover/envoy_8/: envoy_config.yaml
boosting-examples/AdaBoostF_krvskp/envoy_6/: envoy_config.yaml
boosting-examples/AdaBoostF_krvskp/envoy_7/: envoy_config.yaml
boosting-examples/AdaBoostF_letter/director/: director.yaml
boosting-examples/AdaBoostF_letter/envoy_9/: letter_shard_descriptor.py
boosting-examples/AdaBoostF_pendigits/envoy_2/: envoy_config.yaml
boosting-examples/AdaBoostF_sat/envoy_1/: envoy_config.yaml
boosting-examples/AdaBoostF_sat/envoy_3/: envoy_config.yaml
boosting-examples/AdaBoostF_sat/envoy_5/: envoy_config.yaml
boosting-examples/AdaBoostF_sat/envoy_8/: envoy_config.yaml
boosting-examples/AdaBoostF_sat/envoy_9/: envoy_config.yaml
boosting-examples/AdaBoostF_sat/workspace/: AdaboostF_sat.py
boosting-examples/AdaBoostF_segmentation/envoy_4/: envoy_config.yaml
boosting-examples/AdaBoostF_segmentation/envoy_6/: envoy_config.yaml
boosting-examples/AdaBoostF_splice/envoy_1/: envoy_config.yaml
boosting-examples/AdaBoostF_splice/envoy_5/: splice_shard_descriptor.py
boosting-examples/AdaBoostF_splice/workspace/: AdaboostF_splice.py
boosting-examples/AdaBoostF_vehicle/envoy_7/: envoy_config.yaml
boosting-examples/AdaBoostF_vehicle/envoy_9/: envoy_config.yaml
boosting-examples/AdaBoostF_vowel/director/: director.yaml
boosting-examples/AdaBoostF_vowel/envoy_4/: envoy_config.yaml
boosting-examples/AdaBoostF_vowel/envoy_6/: envoy_config.yaml
boosting-examples/RandomForest_Iris/envoy_2/: envoy_config.yaml  iris_shard_descriptor.py
code/openfl/interface/: director.py
openfl-tutorials/boosting-examples/: README.md
openfl-tutorials/interactive_api/PyTorch_Histology/: README.md
openfl/component/aggregator/: aggregator.py
openfl/component/collaborator/: collaborator.py
openfl/databases/: tensor_db.py
openfl/native/: native.py
openfl/pipelines/: __init__.py  generic_pipeline.py  pipeline.py
openfl/protocols/: aggregator.proto  base.proto  utils.py
unito/: Federated_RF.py  IrisDataset.py  MyModel.py  director_envoy_RF.py  test.py
unito/cert/: cert_chain.crt  col_0.csr  col_1.csr  col_2.csr  col_3.csr
unito/examples_old/: IrisDataset.py
unito/openfl_ext/: aggregate_adaboost.py  aggregate_random_forest.py  aggregator.py  assigner.py  client.py  collaborator.py  component_director.py  component_envoy.py  component_experiment.py  data_loader.py  director.py  director_client.py  director_server.py  envoy.py  experiment.py  federation.py  fl_model.py  generic_adapter.py  generic_pipeline.py  identity.py  native.py  pipeline.py  plan.py  runner_generic.py  server.py  tensor_codec.py  tensor_db.py  test.py
(+848 files in other folders)
