# Copyright (C) 2020-2021 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "grpcio-tools~=1.73.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "openfl-x"
version = "1.4.0.dev4"
description = "Model-agnostic federated learning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9,<3.14"
authors = [
    { name = "Gianluca Mittone" },
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: System :: Distributed Computing",
    # NOTE: the "License :: OSI Approved :: ..." classifier is intentionally removed;
    # with setuptools>=77 the SPDX `license` field above is the source of truth (PEP 639).
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Click>=8.1,<9",
    "PyYAML>=6.0",
    "cloudpickle",
    "cryptography>=42.0",
    "dill",
    "docker",
    "dynaconf>=3.2,<4",
    "flatten_json",
    "grpcio>=1.73,<2.0",
    "protobuf>=5.28,<7",
    "ipykernel",
    "jupyterlab",
    "numpy",
    "pandas",
    "requests",
    "rich",
    "scikit-learn",
    "tensorboard",
    "tensorboardX",
    "tqdm",
    "wandb",
]

[project.scripts]
fx = "openfl.interface.cli:entry"

[project.urls]
Homepage = "https://github.com/alpha-unito/OpenFL-extended"
"Source Code" = "https://github.com/alpha-unito/OpenFL-extended"

[tool.setuptools]
include-package-data = true
packages = [
    "openfl",
    "openfl.component",
    "openfl.interface.aggregation_functions",
    "openfl.interface.aggregation_functions.core",
    "openfl.interface.aggregation_functions.experimental",
    "openfl.component.aggregator",
    "openfl.component.assigner",
    "openfl.component.ca",
    "openfl.component.collaborator",
    "openfl.component.director",
    "openfl.component.envoy",
    "openfl.component.straggler_handling_functions",
    "openfl.cryptography",
    "openfl.databases",
    "openfl.databases.utilities",
    "openfl.federated",
    "openfl.federated.data",
    "openfl.federated.plan",
    "openfl.federated.task",
    "openfl.interface",
    "openfl.interface.interactive_api",
    "openfl.native",
    "openfl.pipelines",
    "openfl.plugins",
    "openfl.plugins.frameworks_adapters",
    "openfl.plugins.interface_serializer",
    "openfl.plugins.processing_units_monitor",
    "openfl.protocols",
    "openfl.transport",
    "openfl.transport.grpc",
    "openfl.utilities",
    "openfl.utilities.data_splitters",
    "openfl.utilities.fedcurv",
    "openfl.utilities.fedcurv.torch",
    "openfl.utilities.optimizers.keras",
    "openfl.utilities.optimizers.numpy",
    "openfl.utilities.optimizers.torch",
    "openfl-docker",
    "openfl-gramine",
    "openfl-tutorials",
    "openfl-workspace",
]